# MNN-demo

./: CMakeLists.txt
project/android/: build_64.sh
source/backend/cpu/: CMakeLists.txt  CPUBackend.cpp
source/backend/hiaisop/: CMakeLists.txt
source/backend/hiaisop/backend/: HiAISopBackend.cpp  HiAISopBackend.hpp  HiAISopOpRegister.cpp  HiAISopSymbol.cpp  HiAISopSymbol.hpp  HiAISopTensorManager.cpp  HiAISopTensorManager.hpp
source/backend/hiaisop/execution/: HiAISopConvolution.cpp  HiAISopConvolution.hpp  HiAISopExecution.hpp
source/core/: Macro.h  Pipeline.cpp  TensorUtils.hpp
